[workspace.package]
authors = ["IOG"]
edition = "2024"
homepage = "https://iohk.io/"
repository = "https://github.com/input-output-hk/partner-chains.git"
version = "1.6.0"

[workspace]
members = [
	"demo/node",
	"demo/runtime",
	"toolkit/cli/commands",
	"toolkit/cli/node-commands",
	"toolkit/smart-contracts/commands",
	"substrate-extensions/aura/consensus",
	"toolkit/block-production-log/pallet",
	"substrate-extensions/partner-chains-session",
	"toolkit/committee-selection/pallet",
	"toolkit/committee-selection/pallet/benchmarking",
	"toolkit/committee-selection/rpc",
	"substrate-extensions/aura/primitives",
	"toolkit/block-production-log/primitives",
	"toolkit/sidechain/domain",
	"toolkit/committee-selection/selection",
	"toolkit/committee-selection/authority-selection-inherents",
	"toolkit/data-sources/cli",
	"toolkit/data-sources/db-sync",
	"toolkit/data-sources/mock",
	"toolkit/utils/byte-string-derivation",
	"toolkit/utils/plutus",
	"toolkit/utils/plutus/plutus-datum-derive",
	"toolkit/utils/ogmios-client",
	"toolkit/utils/time-source",
	"toolkit/sidechain/sidechain-mc-hash",
	"toolkit/sidechain/pallet",
	"toolkit/sidechain/rpc",
	"toolkit/sidechain/sidechain-block-search",
	"toolkit/sidechain/sidechain-slots",
	"toolkit/sidechain/primitives",
	"toolkit/committee-selection/primitives",
	"toolkit/committee-selection/query",
	"toolkit/partner-chains-cli",
	"toolkit/native-token-management/pallet",
	"toolkit/native-token-management/primitives",
	"toolkit/smart-contracts/offchain",
	"toolkit/smart-contracts/plutus-data",
	"toolkit/address-associations/pallet",
	"toolkit/block-participation/pallet",
	"toolkit/block-participation/primitives",
	"toolkit/block-producer-fees/pallet",
	"toolkit/block-producer-metadata/pallet",
	"toolkit/block-producer-metadata/primitives",
	"toolkit/block-producer-metadata/rpc",
	"toolkit/utils/db-sync-sqlx",
	"toolkit/governed-map/primitives",
	"toolkit/governed-map/pallet",
]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic
derivable_impls = { level = "allow", priority = 2 }                  # false positives
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
type_complexity = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }                         # stylistic
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
useless_conversion = { level = "allow", priority = 2 }               # Types may change
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.81"
async-trait = "0.1"
assert_cmd = "2.0.14"
cardano-serialization-lib = { default-features = false, version = "14.1.1" }
cbor_event = { version = "2.4.0" }
clap = { version = "4.5.10", features = ["derive"] }
ed25519-zebra = { version = "4.0.3" }
ed25519 = { version = "2.2.2" }
figment = { version = "0.10.19", features = ["env", "test"] }
fraction = { version = "0.15.3", default-features = false }
futures = { version = "0.3.30", features = ["thread-pool"] }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
hex-literal = "1.0.0"
itertools = "0.14.0"
jsonrpsee = { version = "0.24", features = ["client-core", "server", "macros"] }
libp2p-identity = "0.2"
log = { version = "0.4", default-features = false }
minicbor = { version = "0.25.1", features = ["alloc"] }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
quickcheck = { version = "1.0.3" }
pallas-primitives = { version = "0.32.0" }
proptest = { version = "1.5.0" }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
testcontainers = { version = "0.24.0" }
quickcheck_macros = { version = "1" }
quote = "1.0"
rand_chacha = { version = "0.9.0", default-features = false }
rand = { version = "0.9.1", default-features = false }
tokio-retry = { version = "0.3" }
secp256k1 = { version = "0.28.2", default-features = false }
k256 = { version = "0.13.4", default-features = false }
serde = { version = "1.0.209", default-features = false, features = [
	"derive",
	"alloc",
] }
serde_json = { version = '1.0.132', default-features = false, features = [
	"alloc",
] }
syn = "2.0"
tempfile = "3.10.1"
thiserror = { version = "2.0", default-features = false }
time = { version = "0.3.36", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uplc = { version = "1.1.6" }
lru = { version = "0.14.0" }
pretty_assertions = { version = "1.4.1" }
derive_more = { version = "2.0.1", default-features = false }
num-derive = { version = "0.4.2" }
env_logger = { version = "0.11.8" }
bigdecimal = { version = "0.4.8" }
blake2b_simd = { version = "1.0.2", default-features = false }
sealed_test = { version = "1.0.0" }
derive-new = { version = "0.7.0" }
inquire = { version = "0.7.5" }
parking_lot = { version = "0.12.3", default-features = false }
envy = { version = "0.4.2" }
log4rs = { version = "1.3.0" }
bech32 = { version = "0.11.0", default-features = false }
sqlx = { version = "0.7.4", default-features = false, features = [
	"runtime-tokio-rustls",
	"postgres",
	"macros",
	"chrono",
	"migrate",
	"bigdecimal",
] }
derive-where = { version = "1.2.7", default-features = false }

# substrate dependencies
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-basic-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-client-db = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-consensus-grandpa-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-executor = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-network = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-network-test = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-rpc-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-service = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-telemetry = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-transaction-pool-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sc-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-keyring = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-tracing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-storage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
sp-weights = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
substrate-build-script-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
substrate-test-runtime-client = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }
substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503" }

raw-scripts = { git = "https://github.com/input-output-hk/partner-chains-smart-contracts.git", tag = "v7.1.1" }
# local dependencies

# utils
plutus = { path = "toolkit/utils/plutus", default-features = false }
plutus-datum-derive = { default-features = false, path = "toolkit/utils/plutus/plutus-datum-derive" }
byte-string-derive = { default-features = false, path = "toolkit/utils/byte-string-derivation" }
ogmios-client = { path = "toolkit/utils/ogmios-client", default-features = false }
time-source = { path = "toolkit/utils/time-source" }
db-sync-sqlx = { path = "toolkit/utils/db-sync-sqlx" }

# smart contracts
partner-chains-plutus-data = { path = "toolkit/smart-contracts/plutus-data", default-features = false }
partner-chains-cardano-offchain = { path = "toolkit/smart-contracts/offchain", default-features = false }
partner-chains-smart-contracts-commands = { path = "toolkit/smart-contracts/commands", default-features = false }

cli-commands = { path = "toolkit/cli/commands" }
partner-chains-node-commands = { path = "toolkit/cli/node-commands" }
partner-chains-cli = { path = "toolkit/partner-chains-cli", default-features = false }

pallet-address-associations = { path = "toolkit/address-associations/pallet", default-features = false }

# sidechain core
sidechain-domain = { path = "toolkit/sidechain/domain", default-features = false }
sidechain-block-search = { path = "toolkit/sidechain/sidechain-block-search", default-features = false }
sidechain-slots = { path = "toolkit/sidechain/sidechain-slots", default-features = false }
sidechain-mc-hash = { path = "toolkit/sidechain/sidechain-mc-hash", default-features = false }
sp-sidechain = { path = "toolkit/sidechain/primitives", default-features = false }
pallet-sidechain = { path = "toolkit/sidechain/pallet", default-features = false }
pallet-sidechain-rpc = { path = "toolkit/sidechain/rpc", default-features = false }

# committee selection
selection = { path = "toolkit/committee-selection/selection", default-features = false }
sp-session-validator-management = { default-features = false, path = "toolkit/committee-selection/primitives" }
sp-session-validator-management-query = { default-features = false, path = "toolkit/committee-selection/query" }
pallet-session-validator-management = { default-features = false, path = "toolkit/committee-selection/pallet" }
pallet-session-validator-management-benchmarking = { default-features = false, path = "toolkit/committee-selection/pallet/benchmarking" }
pallet-session-validator-management-rpc = { path = "toolkit/committee-selection/rpc" }
authority-selection-inherents = { path = "toolkit/committee-selection/authority-selection-inherents", default-features = false }

# substrate extensions
sc-partner-chains-consensus-aura = { path = "substrate-extensions/aura/consensus", default-features = false }
sp-partner-chains-consensus-aura = { path = "substrate-extensions/aura/primitives", default-features = false }
pallet-partner-chains-session = { path = "substrate-extensions/partner-chains-session", default-features = false }

# native token management
pallet-native-token-management = { path = "toolkit/native-token-management/pallet", default-features = false }
sp-native-token-management = { path = "toolkit/native-token-management/primitives", default-features = false }

# block production and rewards
pallet-block-production-log = { path = "toolkit/block-production-log/pallet", default-features = false }
sp-block-production-log = { path = "toolkit/block-production-log/primitives", default-features = false }
pallet-block-participation = { path = "toolkit/block-participation/pallet", default-features = false }
sp-block-participation = { path = "toolkit/block-participation/primitives", default-features = false }

# block producer fees
pallet-block-producer-fees = { path = "toolkit/block-producer-fees/pallet", default-features = false }

# block producer metadata
pallet-block-producer-metadata = { path = "toolkit/block-producer-metadata/pallet", default-features = false }
pallet-block-producer-metadata-rpc = { path = "toolkit/block-producer-metadata/rpc", default-features = false }
sp-block-producer-metadata = { path = "toolkit/block-producer-metadata/primitives", default-features = false }

# Data Sources
partner-chains-db-sync-data-sources = { path = "toolkit/data-sources/db-sync" }
partner-chains-mock-data-sources = { path = "toolkit/data-sources/mock", default-features = false }

# Governed Map
sp-governed-map = { path = "toolkit/governed-map/primitives", default-features = false }
pallet-governed-map = { path = "toolkit/governed-map/pallet", default-features = false }

# demo node
partner-chains-demo-runtime = { path = "demo/runtime" }
