[package]
name = "e2e"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bech32.workspace = true
bech32.features = ["alloc"]
hex.workspace = true
log.workspace = true
rand.features = ["thread_rng"]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.features = ["v4"]
uuid.workspace = true

[lints]
workspace = true
