[package]
name = "partner-chains-node"
version = "1.2.0"
description = "A reference implementation of a partner chain node"
authors = [ "IOG "]
homepage = "https://iohk.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/input-output-hk/partner-chains/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "partner-chains-node"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
epoch-derivation = { workspace = true }
log = { workspace = true }
sc-cli = { workspace = true, features = ["rocksdb"] }
sp-core = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-partner-chains-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-partner-chains-consensus-aura = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
# This node template uses RocksDB as the storage backend by default.
sc-client-db = { workspace = true, features = ["rocksdb"] }
plutus = { workspace = true }
plutus-datum-derive = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
authority-selection-inherents = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-block-rewards = { workspace = true }
sidechain-domain = { workspace = true }
chain-params = { workspace = true }
sidechain-slots = { workspace = true }
sp-sidechain = { workspace = true }
pallet-sidechain-rpc = { workspace = true }
pallet-session-validator-management = { workspace = true }
sp-session-validator-management = { workspace = true }
sp-session-validator-management-query = { workspace = true }
pallet-session-validator-management-rpc = { workspace = true }
pallet-partner-chains-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
thiserror = { workspace = true }
time-source = { workspace = true }
derive-new = { workspace = true }
partner-chains-node-commands = { workspace = true }
envy = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
sc-rpc = { workspace = true }
sp-api = { workspace = true }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Local Dependencies
sidechain-runtime = { workspace = true }
sidechain-mc-hash = { workspace = true, features = ["mock"] }
sp-native-token-management = { workspace = true }
main-chain-follower-api = { workspace = true }
db-sync-follower = { workspace = true, features = ["block-source", "candidate-source", "native-token"] }
main-chain-follower-mock = { workspace = true, features = ["block-source", "candidate-source", "native-token"] }
tokio = { workspace = true }
cli-commands = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
time-source = { workspace = true, features = ["mock"] }
assert_cmd = { workspace = true }

[features]
default = [
	"sidechain-domain/std",
	"chain-params/std",
]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"sidechain-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
