[package]
name = "partner-chains-node-commands"
version = "1.1.0"
edition = "2021"
license = "GPLv3 with a classpath exception"

[dependencies]
authority-selection-inherents = { workspace = true }
clap = { workspace = true }
cli-commands = { workspace = true }
frame-support = { workspace = true }
main-chain-follower-api = { workspace = true }
parity-scale-codec = { workspace = true }
plutus = { workspace = true }
sidechain-domain = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-sidechain = { workspace = true, default-features = true }
sp-session-validator-management = { workspace = true }
sp-session-validator-management-query = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
