[package]
name = "partner-chains-demo-node"
version.workspace = true
description = "A reference implementation of a partner chain node"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Unlicense"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "partner-chains-demo-node"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
sc-cli = { workspace = true, features = ["rocksdb"] }
sp-core = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-partner-chains-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-partner-chains-consensus-aura = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
# This node template uses RocksDB as the storage backend by default.
sc-client-db = { workspace = true, features = ["rocksdb"] }
plutus = { workspace = true }
plutus-datum-derive = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
authority-selection-inherents = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-block-production-log = { workspace = true }
sidechain-domain = { workspace = true }
sidechain-slots = { workspace = true }
sp-sidechain = { workspace = true }
pallet-sidechain-rpc = { workspace = true }
pallet-session-validator-management = { workspace = true }
sp-session-validator-management = { workspace = true }
sp-session-validator-management-query = { workspace = true }
pallet-session-validator-management-rpc = { workspace = true }
pallet-partner-chains-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
thiserror = { workspace = true }
time-source = { workspace = true }
derive-new = { workspace = true }
partner-chains-node-commands = { workspace = true }
envy = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
sc-rpc = { workspace = true }
sp-api = { workspace = true }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }

# Local Dependencies
partner-chains-demo-runtime = { workspace = true }
sidechain-mc-hash = { workspace = true, features = ["mock"] }
sp-native-token-management = { workspace = true }
db-sync-follower = { workspace = true, features = [
    "block-source",
    "candidate-source",
    "native-token",
    "mc-hash",
    "sidechain-rpc",
    "block-participation",
] }
main-chain-follower-mock = { workspace = true, features = [
    "block-source",
    "candidate-source",
    "native-token",
    "mc-hash",
    "sidechain-rpc",
    "block-participation",
] }
tokio = { workspace = true }
sp-block-participation = { workspace = true, features = ["std"] }
sp-block-producer-metadata = { workspace = true, features = ["std"] }
pallet-block-producer-metadata-rpc = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
time-source = { workspace = true, features = ["mock"] }
assert_cmd = { workspace = true }
sp-native-token-management = { workspace = true, features = ["mock"] }
pallet-sidechain-rpc = { workspace = true, features = ["mock"] }
authority-selection-inherents = { workspace = true, features = ["mock"] }

[features]
default = ["sidechain-domain/std"]
