[package]
name = "partner-chains-demo-node"
version = "1.7.0"
description = "A reference implementation of a partner chain node"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Unlicense"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "partner-chains-demo-node"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
sc-cli = { workspace = true, features = ["rocksdb"] }
sp-core = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-partner-chains-consensus-aura = { workspace = true , version = "1.7.0" }
sp-consensus-aura = { workspace = true }
sp-partner-chains-consensus-aura = { workspace = true , version = "1.7.0" }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
# This node template uses RocksDB as the storage backend by default.
sc-client-db = { workspace = true, features = ["rocksdb"] }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
authority-selection-inherents = { workspace = true , version = "1.7.0" }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-block-production-log = { workspace = true , version = "1.7.0" }
sidechain-domain = { workspace = true , version = "1.7.0" }
sidechain-slots = { workspace = true , version = "1.7.0" }
sp-sidechain = { workspace = true , version = "1.7.0" }
pallet-sidechain-rpc = { workspace = true , version = "1.7.0" }
pallet-session-validator-management = { workspace = true , version = "1.7.0" }
sp-session-validator-management = { workspace = true , version = "1.7.0" }
sp-session-validator-management-query = { workspace = true , version = "1.7.0" }
pallet-session-validator-management-rpc = { workspace = true , version = "1.7.0" }
pallet-partner-chains-session = { workspace = true , version = "1.7.0" }
serde = { workspace = true }
serde_json = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
thiserror = { workspace = true }
time-source = { workspace = true , version = "1.7.0" }
derive-new = { workspace = true }
partner-chains-node-commands = { workspace = true , version = "1.7.0" }
envy = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
sc-rpc = { workspace = true }
sp-api = { workspace = true }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }

# Local Dependencies
partner-chains-demo-runtime = { workspace = true , version = "1.7.0" }
sidechain-mc-hash = { workspace = true, features = ["mock"] , version = "1.7.0" }
sp-native-token-management = { workspace = true , version = "1.7.0" }
partner-chains-db-sync-data-sources = { workspace = true, features = [
    "block-source",
    "candidate-source",
    "governed-map",
    "native-token",
    "mc-hash",
    "sidechain-rpc",
    "block-participation",
] , version = "1.7.0" }
partner-chains-mock-data-sources = { workspace = true, features = [
    "block-source",
    "candidate-source",
    "governed-map",
    "native-token",
    "mc-hash",
    "sidechain-rpc",
    "block-participation",
] , version = "1.7.0" }
tokio = { workspace = true }
sp-block-participation = { workspace = true, features = ["std"] , version = "1.7.0" }
sp-block-producer-metadata = { workspace = true, features = ["std"] , version = "1.7.0" }
pallet-block-producer-metadata-rpc = { workspace = true , version = "1.7.0" }
sp-governed-map = { workspace = true, features = ["std"] , version = "1.7.0" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
time-source = { workspace = true, features = ["mock"] , version = "1.7.0" }
assert_cmd = { workspace = true }
sp-native-token-management = { workspace = true, features = ["mock"] , version = "1.7.0" }
pallet-sidechain-rpc = { workspace = true, features = ["mock"] , version = "1.7.0" }
authority-selection-inherents = { workspace = true, features = ["mock"] , version = "1.7.0" }

[features]
default = ["sidechain-domain/std"]
